# open-bastion

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  presentation.md
.github/workflows/: ci.yml  release.yml
.omc/: continuation-count.json
admin-builder/: README.md  ob-builder
admin-builder/debian/: control  postinst
admin-builder/keyrings/: open-bastion-linagora.gpg
admin-builder/lib/: common.sh  prompts.sh  sso-discovery.sh  validators.sh
admin-builder/man/: ob-builder.1
admin-builder/rpm/: open-bastion-builder.spec.in
ansible-test/: .gitignore  README.md  run-test.sh
ansible-test/ansible/: build-backend.yml  build-bastion.yml  inventory.yml  playbook.yml
ansible-test/sso/: configure.sh  ob-builder-curl-shim.sh
config/: nss_openbastion.conf.example  openbastion.conf.example  pam_llng.conf.example  service-accounts.conf.example
config/hardening/: at.allow  cron.allow
debian/: changelog  config  control  copyright  libpam-llng.pam-llng-heartbeat.timer  libpam-openbastion.service  libpam-openbastion.timer  lightdm-openbastion-greeter.install  lightdm-openbastion-greeter.postinst  open-bastion-builder.install  open-bastion-desktop.install  open-bastion-desktop.postinst  open-bastion-desktop.postrm  open-bastion.config  open-bastion.dirs  open-bastion.install  open-bastion.links  open-bastion.ob-cert.socket  open-bastion.ob-record.socket  open-bastion.ob-record@.service  open-bastion.postinst  open-bastion.postrm  open-bastion.tmpfiles  postinst  postrm  rules  templates
debian/po/: fr.po  templates.pot
doc/: README.md  admin-guide.md  ansible-quickstart.md  audit.md  bastion-architecture.md  competitors.md  configuration.md  crowdsec.md  desktop-sso.md  hardening.md  llng-configuration.md  llng-plugin-parameters.md  offline-cache-admin.md  offline-mode.md  pam-modes.md  permissions.md  presentation.md  rdp-feasibility.md  security.md  service-accounts.md  session-recording.md  shell-quickstart.md  troubleshooting.md
doc/design/: bastion-cert-vouching.md  tamper-evident-session-recording.md
doc/security/: 00-architecture.md  01-enrollment.md  02-ssh-connection.md  03-offboarding.md  99-risk-reduce.md
doc/slides/: Open-Bastion-print.html  Open-Bastion.html  README.md  brand.css
docker/: lmConf-1.json
docker-demo/: README.md  docker-compose.yml  lmConf-1.json
docker-demo-cert/: README.md  docker-compose.yml  lmConf-1.json
docker-demo-cert/backend/: Dockerfile  entrypoint.sh
docker-demo-cert/backend-new/: Dockerfile  entrypoint.sh
docker-demo-cert/bastion/: Dockerfile  entrypoint.sh
docker-demo-cert/sso/: Dockerfile  init-tokens.sh
docker-demo-maxsec/: README.md  docker-compose.yml
docker-demo-maxsec/backend/: Dockerfile  entrypoint.sh
docker-demo-token/: README.md  docker-compose.yml  lmConf-1.json
docker-demo-token-svc/: README.md  docker-compose.yml  lmConf-1.json
docker-rdp-poc/: README.md  docker-compose.yml  lmConf-1.json
include/: audit_log.h  auth_cache.h  bastion_jwt.h  cache_key.h  client_context.h  config.h  crowdsec.h  jti_cache.h  jwks_cache.h  llng_client.h  notify.h  ob_cert_proto.h  ob_client.h  offline_cache.h  path_validator.h  rate_limiter.h  secret_store.h  service_account.h  ssh_key_policy.h  str_utils.h  token_cache.h  token_manager.h
llng-plugin/: llng.patch
local-test/: .gitignore  README.md  deploy-all-modes.sh  deploy-ansible.sh  deploy-shell.sh  lib.sh  mkvm.sh
man/: llng-backend-setup.8  llng-bastion-setup.8  llng-pam-enroll.8  llng-pam-heartbeat.8  llng-session-recorder.8  llng-ssh-cert.1  ob-backend-setup.8  ob-bastion-id.1  ob-bastion-setup.8  ob-cert-daemon.8  ob-cert-request.1  ob-enroll.8  ob-heartbeat.8  ob-record-connect.1  ob-record-sink.8  ob-scp.1  ob-session-prune.8  ob-session-recorder.8  ob-sftp.1  ob-ssh-cert.1  ob-ssh-proxy.1  ob-ssh.1
nss/: CMakeLists.txt  libnss_llng.c  libnss_openbastion.c  nss_llng.conf.example
quick-start/: README.md  docker-compose.yml  lmConf-1.json
rpm/: open-bastion.spec  pam-llng.spec
scripts/: llng-backend-setup  llng-bastion-setup  llng-pam-enroll  llng-pam-heartbeat  llng-session-recorder  llng-ssh-cert  llng-ssh-proxy  ob-backend-setup  ob-bastion-cert-helper  ob-bastion-id  ob-bastion-setup  ob-cache-admin  ob-cert-lib.sh  ob-desktop-setup  ob-enroll  ob-heartbeat  ob-scp  ob-service-account-keys  ob-session-monitor  ob-session-prune  ob-session-recorder  ob-sftp  ob-ssh  ob-ssh-cert  ob-ssh-proxy  session-recorder.conf.example  ssh-proxy.conf.example
src/: audit_log.c  auth_cache.c  bastion_jwt.c  cache_key.c  client_context.c  config.c  crowdsec.c  jti_cache.c  jwks_cache.c  llng_client.c  notify.c  ob-cert-daemon.c  ob-cert-request.c  ob-record-connect.c  ob-record-sink.c  ob-session-recorder-wrapper.c  ob_cert_proto.c  ob_client.c  offline_cache.c  pam_llng.c  pam_openbastion.c  rate_limiter.c  secret_store.c  service_account.c  ssh_key_policy.c  str_utils.c  token_cache.c  token_manager.c
systemd/: ob-cert.socket  ob-cert@.service  ob-heartbeat.service  ob-heartbeat.timer  ob-session-monitor.service  ob-session-prune.service  ob-session-prune.timer  pam-llng-heartbeat.service  pam-llng-heartbeat.timer
tests/: CMakeLists.txt  test_audit_log.c  test_auth_cache.c  test_backend_cert_acceptance.sh  test_bastion_jwt.c  test_client_context.c  test_config.c  test_crowdsec.c  test_integration_docker.sh  test_integration_maxsec.sh  test_integration_token_svc.sh  test_jti_cache.c  test_jwks_cache.c  test_llng_client.c  test_notify.c  test_nss_cache.c  test_nss_llng.c  test_nss_openbastion.c  test_ob_backend_setup.sh  test_ob_bastion_setup.sh  test_ob_bastion_setup_audit.sh  test_ob_bastion_setup_hardening.sh  test_ob_builder_service_accounts.sh  test_ob_cert_proto.c  test_ob_client.c  test_ob_enroll.sh  test_ob_heartbeat.sh  test_ob_record_sink.sh  test_ob_scp.sh  test_ob_session_prune.sh  test_ob_session_recorder.sh  test_ob_sftp.sh  test_ob_ssh.sh  test_ob_ssh_cert.sh  test_ob_ssh_proxy.sh  test_ob_sshd_dropin_precedence.sh  test_offline_cache.c  test_offline_security.c  test_path_validator.c  test_rate_limiter.c  (+7 more)
(+82 files in other folders)
